pom.xml: upgrade to JDK 1.8
We can now upgrade Guava and Jackson.

Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>