@@ -89,11 +89,9 @@
     <properties>
         <async-http-client.version>1.9.40</async-http-client.version>
         <ehcache.version>3.3.1</ehcache.version>
-        <!-- Release 21.0 requires JDK 1.8 or newer -->
-        <guava.version>20.0</guava.version>
+        <guava.version>26.0-jre</guava.version>
         <guice.version>4.1.0</guice.version>
-        <!-- Release 2.7 requires JDK 1.7 or newer -->
-        <jackson.version>2.6.7</jackson.version>
+        <jackson.version>2.9.7</jackson.version>
         <jersey.version>1.19.3</jersey.version>
         <jetty.version>9.2.10.v20150310</jetty.version>
         <joda-time.version>2.9.9</joda-time.version>
@@ -111,8 +109,7 @@
         <metrics.version>3.2.2</metrics.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.25</slf4j.version>
-        <!-- Release 1.5.11+ requires Jackson 2.8+ -->
-        <swagger.version>1.5.10</swagger.version>
+        <swagger.version>1.5.21</swagger.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -171,6 +168,11 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-smile</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
@@ -744,7 +746,7 @@
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.19.0-GA</version>
+                <version>3.21.0-GA</version>
             </dependency>
             <dependency>
                 <groupId>org.joda</groupId>
@@ -1405,6 +1407,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.0</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <showDeprecation>true</showDeprecation>
+                        <showWarnings>true</showWarnings>
+                        <fork>true</fork>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1439,7 +1448,7 @@
                                         <version>3.0.0</version>
                                     </requireMavenVersion>
                                     <requireJavaVersion>
-                                        <version>1.6</version>
+                                        <version>1.8</version>
                                     </requireJavaVersion>
                                     <bannedDependencies>
                                         <excludes>
@@ -1497,7 +1506,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.13</version>
                     <configuration>
-                        <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m -XX:MaxDirectMemorySize=512m</argLine>
+                        <argLine>-Xms512m -Xmx1024m -XX:MaxDirectMemorySize=512m</argLine>
                         <useManifestOnlyJar>false</useManifestOnlyJar>
                         <systemPropertyVariables>
                             <file.encoding>UTF-8</file.encoding>
@@ -2046,6 +2055,10 @@
                         <artifactId>maven-dependency-versions-check-plugin</artifactId>
                     </plugin>
                     <plugin>
+                        <groupId>com.ning.maven.plugins</groupId>
+                        <artifactId>maven-duplicate-finder-plugin</artifactId>
+                    </plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                     </plugin>
@@ -2067,12 +2080,6 @@
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
-                    <!-- Comment out the plugin for now. Logs are getting too big on Travis which fails the build,
-                         see for example https://api.travis-ci.org/jobs/5172875/log.txt?deansi=true -->
-                    <!--<plugin>-->
-                    <!--<groupId>com.ning.maven.plugins</groupId>-->
-                    <!--<artifactId>maven-duplicate-finder-plugin</artifactId>-->
-                    <!--</plugin>-->
                     <plugin>
                         <groupId>org.apache.rat</groupId>
                         <artifactId>apache-rat-plugin</artifactId>
@@ -2104,6 +2111,10 @@
                         <artifactId>maven-dependency-versions-check-plugin</artifactId>
                     </plugin>
                     <plugin>
+                        <groupId>com.ning.maven.plugins</groupId>
+                        <artifactId>maven-duplicate-finder-plugin</artifactId>
+                    </plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                     </plugin>
@@ -2125,12 +2136,6 @@
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
-                    <!-- Comment out the plugin for now. Logs are getting too big on Travis which fails the build,
-                         see for example https://api.travis-ci.org/jobs/5172875/log.txt?deansi=true -->
-                    <!--<plugin>-->
-                    <!--<groupId>com.ning.maven.plugins</groupId>-->
-                    <!--<artifactId>maven-duplicate-finder-plugin</artifactId>-->
-                    <!--</plugin>-->
                     <plugin>
                         <groupId>org.apache.rat</groupId>
                         <artifactId>apache-rat-plugin</artifactId>
@@ -2219,9 +2224,6 @@
         </profile>
         <profile>
             <id>jdk16</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -2233,6 +2235,24 @@
                             <showDeprecation>true</showDeprecation>
                             <showWarnings>true</showWarnings>
                             <fork>true</fork>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar</goal>
+                                    <goal>test-jar</goal>
+                                </goals>
+                                <configuration>
+                                    <classifier>jdk16</classifier>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skipIfEmpty>true</skipIfEmpty>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -2276,6 +2296,9 @@
         </profile>
         <profile>
             <id>jdk18</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -2287,24 +2310,6 @@
                             <showDeprecation>true</showDeprecation>
                             <showWarnings>true</showWarnings>
                             <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>jar</goal>
-                                    <goal>test-jar</goal>
-                                </goals>
-                                <configuration>
-                                    <classifier>jdk18</classifier>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <skipIfEmpty>true</skipIfEmpty>
                         </configuration>
                     </plugin>
                 </plugins>
